fix: text centering on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -14,6 +14,8 @@
 //Tablets
 @include mediaMd{
     main {
+        overflow-x: hidden;
+
         align-items: center;
         text-align: center;
 
@@ -65,10 +67,24 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
 //Phones
 @include mediaSm{
-    main#home h1{
-        margin-top: 10vh;
+    main#home, h1{
+        margin-top: 10vh; 
+    }
+
+    .main{
+        padding: 2rem;
+    }
+    
+    h1.lg-heading{
+        font-size: 3rem;
+        margin-top: 1rem;
+    }
+
+    .boxes div{
+        font-size: 1.5rem;
     }
 
     .projects{
