--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,7 +18,7 @@ body{
 
 // Headings
 h1, h2, h3 {
-    margin:0;
+    margin: 2rem;
     font-weight: 400;
 
     &.lg-heading{
